Bug 133180 - Only a part of style preview text is highlighted with a highlighting enabled
Summary: Only a part of style preview text is highlighted with a highlighting enabled
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-05-19 21:15 UTC by Telesto
Modified: 2020-09-16 07:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-05-19 21:15:39 UTC
Description:
Only a part of style preview text is highlighted with a highlighting enabled

Steps to Reproduce:
1. Open Writer
2. Right Click Complimentary close (in the Paragraph styles Sidebar)
3. Click Modify
4. Area -> Color -> Pick a color and press OK
5. Only Comp is highlighted.. 

Actual Results:
Only Comp is highlighted

Expected Results:
Everything highlighted


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.0.0.0.alpha1+ (x64)
Build ID: f9790da286f2d2fa47f1748f8cfa6172c6622ca3
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: de-CH (nl_NL); UI: en-US
Calc: CL

but not in

Version: 6.0.6.0.0+
Build ID: c30963b8b4bbbe42a24b97aafa161eff9d7ccdd4
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: nl-NL (nl_NL); Calc:
Comment 1 Telesto 2020-05-21 15:39:42 UTC
Bisected to
author	Caolán McNamara <caolanm@redhat.com>	2020-04-26 15:43:25 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-04-29 09:46:08 +0200
commit fe9a13dc0e6d1384416c2a2343223b33925fc925 (patch)
tree a43a8ea0cc46407b8932dced64cf34d595f3b3e9
parent cf36fe5eb41910c26d58fb25e54ccf2e0ee01365 (diff)
weld SfxTemplatePanelControl

https://cgit.freedesktop.org/libreoffice/core/commit/?id=fe9a13dc0e6d1384416c2a2343223b33925fc92

~/win64-6.5
$ git bisect good 1c6663f78a957ca7d233a90655020c06bca8c0ea is the first bad commit
commit 1c6663f78a957ca7d233a90655020c06bca8c0ea
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Wed Apr 29 01:10:01 2020 -0700

    source fe9a13dc0e6d1384416c2a2343223b33925fc925

    source fe9a13dc0e6d1384416c2a2343223b33925fc925

:040000 040000 8023f70c307255ce95a2475912db1d82615e9fa6 f73c11be345d18f012b2695f1ef6fb6cc7e30be7 M      instdir
Comment 2 raal 2020-05-21 21:08:01 UTC
works for me with Version: 7.0.0.0.alpha1+
Build ID: 444c7c736be7545344298a9cbb3a69886edc5ecb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

but I can confirm with Version: 7.0.0.0.alpha1+
Build ID: 444c7c736be7545344298a9cbb3a69886edc5ecb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2020-05-22 14:14:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7d64beb17dc46203334de53f65ef955083ce5b46

Resolves: tdf#133180 use full width of canvas for preview render

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2020-06-01 14:13:57 UTC
Verified in

Version: 7.0.0.0.beta1+
Build ID: 2506d8221dd940dfd93d3d7c183430ba6ba3089d
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!