Resolves: tdf#133180 use full width of canvas for preview render

Change-Id: I1fa3f0fd8505712155c72c25b67da1ab6d4753e4